# 100-exercises-to-learn-rust

exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/05_nullability/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/05_ticket_v2/14_source/src/: lib.rs
exercises/05_ticket_v2/15_outro/src/: description.rs  status.rs  title.rs
exercises/06_ticket_management/01_arrays/src/: lib.rs
exercises/06_ticket_management/02_vec/src/: lib.rs
exercises/06_ticket_management/08_impl_trait/src/: lib.rs
exercises/06_ticket_management/11_mutable_slices/src/: lib.rs
exercises/07_threads/01_threads/src/: lib.rs
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: data.rs  handlers.rs  lib.rs  store.rs
exercises/08_futures/08_outro/tests/: check.rs
helpers/ticket_fields/: Cargo.toml
helpers/ticket_fields/src/: title.rs
(+14 files in other folders)
