[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
ticket_fields = { path = "../../../helpers/ticket_fields" }
axum = {version = "0.7.5", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace"] }
mime = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }